<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulotextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sans_serif_exb_italic"
        android:text="@string/titulo_texto"
        android:textColor="#A020F0"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <TextView
        android:id="@+id/tvTtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_bienvenida"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266" />

    <TextView
        android:id="@+id/tvTextoRelleno1"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/texto2_textViewActivity"
        android:textColor="#0000ff"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598" />

    <EditText
        android:id="@+id/etEntradaUno"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="512dp"
        android:gravity="center"
        android:text="@string/texto_editText1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvTextoLargo"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Esta actividad esta usando varios TextView y un TextEdit para la practica de su uso, este texto esta colocado explicitamente en el item del XML por cuestiones practiso, pero el titulo y los demas estan en el 'strings.xml' llamados en los elementos, se usa un diferente tipo de letra para el titulo, agregado en el XML fonts, dentro de la carpeta font en los recursos, agregada junto con un par de fuentes para dar mas estetica"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416" />

    <Button
        android:id="@+id/btnIrARaiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898" />

</androidx.constraintlayout.widget.ConstraintLayout>