<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContainersActivity">

    <ImageView
        android:id="@+id/ivContainersFuturista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101"
        app:srcCompat="@drawable/imagen_de_whatsapp_2025_08_21_a_las_21_09_18_0ad8f8dc" />

    <ImageView
        android:id="@+id/ivContainersMontanas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:srcCompat="@drawable/imagen_de_whatsapp_2025_08_21_a_las_21_09_18_c633d356"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <ImageView
        android:id="@+id/ivContainersCieloAzul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:srcCompat="@drawable/imagen_de_whatsapp_2025_08_21_a_las_21_09_19_586aa1ab"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <ImageView
        android:id="@+id/ivContainersHollowKnight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/imagen_de_whatsapp_2025_08_21_a_las_21_09_19_afa398d0" />

    <TextView
        android:id="@+id/tvTitulo4toActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sans_serif_exb_italic"
        android:text="@string/tvTituloContainer"
        android:textColor="#A020F0"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/tvTexto1Containers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTexto1Containers"
        android:textColor="#9b9b9b"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:entries="@array/opciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <ScrollView
        android:id="@+id/myScrollView"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="24dp"
        android:background="#808a9597"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/longTextView"
            android:layout_width="132dp"
            android:layout_height="12dp"
            android:justificationMode="inter_word"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/tv_scroolview"
            android:textColor="#000000"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="230dp" />
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/myCardView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="95dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="268dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/sans_serif_exb_italic"
                android:gravity="center_horizontal"
                android:text="@string/tv_scroolview2"
                android:textColor="#FF7b8b7b"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/tv_scroolview3"
                android:textSize="14sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/Salidabutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_regresarContainers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />


</androidx.constraintlayout.widget.ConstraintLayout>